Nandu captions set

--- a/index.html
+++ b/index.html
@@ -15,21 +15,18 @@
     <div class="paper heart"></div>
 
     <div class="paper image">
-      <p>and I fallen in</p>
-      <p>Love with You 😍</p>
+      <p>You are my Favorate</p>
+      <p>😍</p>
       <img src="images/collage1.jpeg" />
     </div>
 
     <div class="paper image">
-      <p>How can be</p>
-      <p>Bestiee 4Ever❤️</p>
-
       <img src="images/collage2.jpeg" />
     </div>
 
     <div class="paper image">
       <p>How can be</p>
-      <p>someone so cute ❤️</p>
+      <p>Sweet❤️</p>
 
       <img src="images/collage3.jpeg" />
     </div>
@@ -43,7 +40,7 @@
 
     <div class="paper image">
       <p>How can be</p>
-      <p>someone so cute ❤️</p>
+      <p>😍❤️</p>
 
       <img src="images/onam2.jpeg" />
     </div>
