--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <div class="paper heart"></div>
 
     <div class="paper image">
-      <p>You are my Favorate</p>
+      <p>I Love You</p>
       <p>😍</p>
       <img src="images/collage1.jpeg" />
     </div>
 
     <div class="paper image">
+      <p>You are my Favorate</p>
       <img src="images/collage2.jpeg" />
     </div>
 
