--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="paper heart"></div>
 
     <div class="paper image">
-      <p>I Love You</p>
+      <p>And I Love You</p>
       <p>😍</p>
       <img src="images/collage1.jpeg" />
     </div>
